@@ -23,26 +23,26 @@ varm2[mask] = N.ma.masked
 var2dm1 = varm1.reshape(nt, -1)
 var2dm2 = varm2.reshape(nt, -1)
 dstats = dict(
-    tavail = 1.*(~varm1.mask).sum(axis=0)/nt, 
-    tmean = (varm1.mean(axis=0), varm2.mean(axis=0)), 
-    tbias = varm2.mean(axis=0)-varm1.mean(axis=0), 
-    tstd = (varm1.std(axis=0), varm2.std(axis=0)), 
-    trms = N.ma.sqrt(((varm1-varm2)**2).mean(axis=0)), 
+    tavail = 1.*(~varm1.mask).sum(axis=0)/nt,
+    tmean = (varm1.mean(axis=0), varm2.mean(axis=0)),
+    tbias = varm2.mean(axis=0)-varm1.mean(axis=0),
+    tstd = (varm1.std(axis=0), varm2.std(axis=0)),
+    trms = N.ma.sqrt(((varm1-varm2)**2).mean(axis=0)),
     tcrms = (varm1-varm2).std(axis=0),
     tcorr = ((varm1-varm1.mean(axis=0))*(varm2-varm2.mean(axis=0))).mean(axis=0)/ \
-        (varm1.std(axis=0)*varm2.std(axis=0)),  
-    savail = 1.*(~var2dm1.mask).sum(axis=1)/var2dm1.shape[1], 
-    smean = (var2dm1.mean(axis=1), var2dm2.mean(axis=1)), 
-    sbias = var2dm2.mean(axis=1)-var2dm1.mean(axis=1), 
-    sstd = (var2dm1.std(axis=1), var2dm2.std(axis=1)), 
-    srms = N.ma.sqrt(((var2dm1-var2dm2)**2).mean(axis=1)), 
-    scrms = (var2dm1-var2dm2).std(axis=1), 
+        (varm1.std(axis=0)*varm2.std(axis=0)),
+    savail = 1.*(~var2dm1.mask).sum(axis=1)/var2dm1.shape[1],
+    smean = (var2dm1.mean(axis=1), var2dm2.mean(axis=1)),
+    sbias = var2dm2.mean(axis=1)-var2dm1.mean(axis=1),
+    sstd = (var2dm1.std(axis=1), var2dm2.std(axis=1)),
+    srms = N.ma.sqrt(((var2dm1-var2dm2)**2).mean(axis=1)),
+    scrms = (var2dm1-var2dm2).std(axis=1),
     scorr = ((var2dm1.T-var2dm1.T.mean(axis=0))*(var2dm2.T-var2dm2.T.mean(axis=0))).mean(axis=0)/ \
         (var2dm1.std(axis=1)*var2dm2.std(axis=1)),
 )
 
 # Indirect using StatAccum
-sa = StatAccum()
+sa = StatAccum(tall=True, sall=True)
 sa += var1[:10], var2[:10]
 sa += var1[10:], var2[10:]
 istats = sa.get_stats()
@@ -53,7 +53,7 @@ for key in sorted(dstats.keys()):
     if isinstance(dstats[key], tuple):
         value = ()
         for i in 0, 1:
-            value += N.ma.allclose(dstats[key][i], istats[key][i]), 
+            value += N.ma.allclose(dstats[key][i], istats[key][i]),
     else:
         value = N.ma.allclose(dstats[key], istats[key])
     result.append(('assertTrue', value))
